[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pytorch-projects"
version = "0.1.0"
description = "Random PyTorch Projects for Educational Learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jon Perry" }
]
keywords = ["reinforcement-learning", "computer-vision", "rl", "games", "ocr"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Intended Audience :: Science/Research"
]

dependencies = [
  "numpy>=1.24",
  "mss>=9.0.1",
  "opencv-python>=4.9.0.80",
  "pynput>=1.7.6",
  "gymnasium>=0.29.1",
  "matplotlib",
  "hatch",
]

[project.optional-dependencies]
torch = [
    "torch==2.7.0",
    "torchvision==0.22.0",
    "torchaudio==2.7.0",
]
ocr = [
  "pytesseract>=0.3.10"
]

rl = [
  "stable-baselines3>=2.3.2",
]

dev = [
  "ruff>=0.6.0",
  "black>=24.3.0",
  "isort>=5.13.2",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "types-PyYAML",
  "types-requests"
]

[tool.hatch.build]
include = [
  "README.md",
  "LICENSE"
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
float_to_top = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv.pip]
extra-index-url = [
    "https://download.pytorch.org/whl/cpu",
    "https://download.pytorch.org/whl/cu118",
    "https://download.pytorch.org/whl/cu126",
]

[tool.hatch.envs.default.scripts]
torch-cpu = "pip install --index-url https://download.pytorch.org/whl/cpu --extra-index-url https://pypi.org/simple .[torch]"
torch-cu11 = "pip install --index-url https://download.pytorch.org/whl/cu118 --extra-index-url https://pypi.org/simple .[torch]"
torch-cu12 = "pip install --index-url https://download.pytorch.org/whl/cu126 --extra-index-url https://pypi.org/simple .[torch]"
dev = "pip install .[dev]"
